<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:scrollbarStyle="outsideInset">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/personal_bg">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="60dp">
                <com.example.shadow.howalive.CircleImageView
                    android:id="@+id/personal_image"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/try1"
                    app:civ_border_color="@color/personal_head_bg"
                    app:civ_border_width="5dp" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="30dp">
                <TextView
                    android:id="@+id/personal_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:textSize="22sp"
                    android:textColor="@color/text_gray"
                    android:text="@string/personal_ueser_name"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp">
                <ImageView
                    android:id="@+id/personal_sax"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/sex_woman"
                    android:layout_centerHorizontal="true"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp">
                <TextView
                    android:id="@+id/personal_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:textSize="22sp"
                    android:textColor="@color/text_gray"
                    android:text="@string/personal_city"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp">
                <TextView
                    android:id="@+id/personal_days"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:textSize="22sp"
                    android:textColor="@color/text_gray"
                    android:text="@string/personal_days"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="40dp">
                <Button
                    android:id="@+id/personal_edit_data_btn"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:text="@string/personal_edit_data_btn"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:background="@drawable/personal_corners_bg"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="40dp">
                <Button
                    android:id="@+id/personal_set_btn"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/personal_set_btn"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:background="@drawable/personal_corners_bg"/>
            </RelativeLayout>
        </LinearLayout>

    </ScrollView>



</LinearLayout>
